@@ -19,8 +19,11 @@
     background: $color-white;
     border-top: 0 solid $color-grey-5; // this top border provides space for the floating logo to toggle the menu
     min-height: 100%;
-    padding-bottom: 4em;
     position: relative; // yuk. necessary for positions for jquery ui widgets
+
+    @include media-breakpoint-up(sm) {
+        padding-bottom: 4em;
+    }
 }
 
 @include media-breakpoint-up(sm) {
